Prevent Digit Overflow

--- a/foundations/project-calculator/css/style.css
+++ b/foundations/project-calculator/css/style.css
@@ -9,6 +9,7 @@ html {
 }
 
 body {
+  font-family: 'Fira Code', monospace;
   display: flex;
   justify-content: center;
   font-size: 24px;
@@ -23,6 +24,7 @@ button {
 .main-container {
   display: flex;
   flex-direction: column;
+  width: 421px;
   padding: 1rem;
   border: 3px solid black;
 }
@@ -31,12 +33,13 @@ button {
   display: flex;
 }
 
-#calculator-display {
+#calculator-text {
   display: flex;
   justify-content: flex-end;
   border: 1px solid black;
-  padding: 0.2rem 0.7rem;
+  padding: 1rem;
   margin-bottom: 1rem;
+  overflow: hidden;
 }
 
 #btn-zero {
